add new "pay" method to PaymentController
